[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Length.gd" type="Script" id=1]
[ext_resource path="res://fonts/CooperBlackStd.otf" type="DynamicFontData" id=2]
[ext_resource path="res://buttons/5_days.png" type="Texture" id=3]
[ext_resource path="res://buttons/20_days.png" type="Texture" id=4]
[ext_resource path="res://buttons/10_days.png" type="Texture" id=5]
[ext_resource path="res://Images/Storytelling.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[node name="length_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="blank_background" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="Subtitle" type="Label" parent="."]
margin_top = 282.0
margin_right = 1024.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( 569, 248 )
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.0392157, 0, 0.576471, 1 )
custom_fonts/font = SubResource( 3 )
text = "How long do you want to play?"
align = 1
valign = 1

[node name="FiveButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 234.0
margin_top = 419.0
margin_right = 1415.0
margin_bottom = 706.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 176, 35 )
theme = SubResource( 2 )
icon = ExtResource( 3 )
flat = true

[node name="TenButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 233.0
margin_top = 504.0
margin_right = 1371.0
margin_bottom = 790.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 176, 35 )
icon = ExtResource( 5 )
flat = true

[node name="TwentyButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 234.0
margin_top = 589.0
margin_right = 1372.0
margin_bottom = 876.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 176, 35 )
icon = ExtResource( 4 )
flat = true

[connection signal="pressed" from="FiveButton" to="." method="_on_FiveButton_pressed"]
[connection signal="pressed" from="TenButton" to="." method="_on_TenButton_pressed"]
[connection signal="pressed" from="TwentyButton" to="." method="_on_TwentyButton_pressed"]
